fix: add min-gap of 0.5em between navbar button at 320px+

--- a/src/app/layout/navi/navi.scss
+++ b/src/app/layout/navi/navi.scss
@@ -39,6 +39,11 @@
   li {
     max-width: 8rem;
     flex: 1;
+    border-radius: $navi-border-radius;
+
+    &:hover {
+      background-color: $blue-dark-hover;
+    }
 
     &.active {
       background: $blue-darker;
@@ -66,6 +71,14 @@
     }
   }
 
+  .navigation {
+    gap: min(0.25em);
+
+    @include for-size(sm) {
+      gap: min(1.5em);
+    }
+  }
+
   a {
     color: $grey-light2;
     transition: $trans-default;
@@ -74,7 +87,7 @@
     text-align: center;
     line-height: 1.2;
     gap: 0.25rem;
-    font-size: 0.875rem;
+    font-size: 0.8rem;
 
     &:hover {
       color: $white;
@@ -99,6 +112,7 @@
 
 #footer-nav {
   justify-content: flex-end;
+
   li {
     padding: $space-sm 0;
   }
